<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@color/orange">

    <RelativeLayout
        android:id="@+id/bottom_layover"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@color/orange"
        android:orientation="horizontal"
        android:weightSum="2"
        android:visibility="gone">

        <Button
            android:id="@+id/send_products"
            style="@style/WhiteText"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_alignParentRight="false"
            android:layout_margin="1dp"
            android:background="@drawable/focus_button"
            android:onClick="addComment"
            android:text="@string/button_send"
            android:textSize="35sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txtResultId"
        android:layout_width="215dp"
        android:layout_height="53dp"
        android:layout_marginBottom="17dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="17dp"
        android:background="@color/white"
        android:textColor="@color/orange_dark"
        android:gravity="right"
        android:drawableLeft="@drawable/euro_sign"
        android:paddingBottom="1dp"
        android:paddingLeft="10dp"
        android:paddingRight="20dp"
        android:visibility="gone"
        android:paddingTop="1dp"
        android:textSize="35sp" />

    <TableLayout
        android:id="@+id/tableId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtResultId"
        android:visibility="gone"
        android:layout_margin="2dp">

        <TableRow
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp">

            <Button
                android:id="@+id/btnNum1Id"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="53dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/focus_color"
                android:text="@string/num_1"
                android:textSize="35sp" />

            <Button
                android:id="@+id/btnNum2Id"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="53dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/focus_color"
                android:text="@string/num_2"
                android:textSize="35sp" />

            <Button
                android:id="@+id/btnNum3Id"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="53dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/focus_color"
                android:text="@string/num_3"
                android:textSize="35sp" />

        </TableRow>

        <TableRow
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp">

            <Button
                android:id="@+id/btnNum4Id"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="53dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/focus_color"
                android:text="@string/num_4"
                android:textSize="35sp" />

            <Button
                android:id="@+id/btnNum5Id"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="53dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/focus_color"
                android:text="@string/num_5"
                android:textSize="35sp" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/btnNum6Id"
                android:text="@string/num_6"
                android:background="@drawable/focus_color"
                android:textSize="35sp"
                android:layout_width="50dp"
                android:layout_height="53dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp">

            <Button
                android:id="@+id/btnNum7Id"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="53dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/num_7"
                android:background="@drawable/focus_color"
                android:textSize="35sp" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/btnNum8Id"
                android:text="@string/num_8"
                android:background="@drawable/focus_color"
                android:textSize="35sp"
                android:layout_width="50dp"
                android:layout_height="53dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/btnNum9Id"
                android:text="@string/num_9"
                android:background="@drawable/focus_color"
                android:textSize="35sp"
                android:layout_width="50dp"
                android:layout_height="53dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp">

            <Button
                android:id="@+id/btnNum0Id"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="53dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/focus_color"
                android:minWidth="100dp"
                android:text="@string/num_0"
                android:textSize="35sp" />

            <Button
                android:id="@+id/btnNum00Id"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="50dp"
                android:layout_height="53dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/focus_color"
                android:minWidth="100dp"
                android:text="@string/num_00"
                android:textSize="35sp" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/btnComma"
                android:text="@string/comma"
                android:background="@drawable/focus_color"
                android:layout_width="50dp"
                android:layout_height="53dp"
                android:layout_marginRight="10dp"
                android:textSize="35sp"
                android:layout_weight="1" />


        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_alignBottom="@+id/txtResultId"
        android:layout_alignRight="@+id/tableId"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/txtResultId"
        android:background="@drawable/focus_button"
        android:drawableTop="@drawable/del"
        android:paddingTop="20dp"
        android:visibility="gone" />

</RelativeLayout>